RESOLVED FIXED63335
Web process pause dialog looks bad on Vista/7
https://bugs.webkit.org/show_bug.cgi?id=63335
Summary Web process pause dialog looks bad on Vista/7
Adam Roben (:aroben)
Reported 2011-06-24 10:56:44 PDT
Web process pause dialog looks bad on Vista/7
Attachments
Patch (4.32 KB, patch)
2011-06-24 10:57 PDT, Adam Roben (:aroben)
bweinstein: review+
Adam Roben (:aroben)
Comment 1 2011-06-24 10:57:14 PDT
Adam Roben (:aroben)
Comment 2 2011-06-24 11:10:17 PDT
Note You need to log in before you can comment on or make changes to this bug.