Source/WebKit2/WebProcess/WebKitMain.cpp
@@ -29,6 +29,7 @@
 #include "PluginProcessMain.h"
 #include "ProcessLauncher.h"
 #include "WebProcessMain.h"
+#include <shlwapi.h>
 #include <wtf/text/CString.h>
 
 #if PLATFORM(MAC)
@@ -73,12 +74,6 @@ int WebKitMain(int argc, char** argv)
 }
 
 #elif PLATFORM(WIN)
-
-#ifndef DEBUG_ALL
-#define PROCESS_NAME L"WebKit2WebKitProcess.exe"
-#else
-#define PROCESS_NAME L"WebKit2WebProcess_debug.exe"
-#endif
 
 static void enableDataExecutionPrevention()
 {
@@ -148,15 +143,34 @@ static void disableUserModeCallbackExceptionFilter()
     FreeLibrary(lib);
 }
 
+#ifndef NDEBUG
+static void pauseProcessIfNeeded(HMODULE module)
+{
+    // Show an alert when Ctrl-Alt-Shift is held down during launch to give the user time to attach a
+    // debugger. This is useful for debugging problems that happen early in the web process's lifetime.
+    const unsigned short highBitMaskShort = 0x8000;
+    if (!getenv("WEBKIT2_PAUSE_WEB_PROCESS_ON_LAUNCH") && !(::GetKeyState(VK_CONTROL) & highBitMaskShort) && (::GetKeyState(VK_MENU) & highBitMaskShort) && (::GetKeyState(VK_SHIFT) & highBitMaskShort))
+        return;
+
+    wchar_t path[MAX_PATH];
+    DWORD length = ::GetModuleFileNameW(module, path, WTF_ARRAY_LENGTH(path));
+    if (!length || length == WTF_ARRAY_LENGTH(path))
+        return;
+
+    wchar_t* startOfFilename = ::PathFindFileNameW(path);
+    String filenameString(startOfFilename, length - (startOfFilename - path));
+
+    String message = L"You can now attach a debugger to " + filenameString + L". You can use the same debugger for " + filenameString + L" and the UI process, if desired. Click OK when you are ready for " + filenameString + L" to continue.";
+    String title = filenameString + L" has launched";
+    ::MessageBoxW(0, message.charactersWithNullTermination(), title.charactersWithNullTermination(), MB_OK | MB_ICONINFORMATION);
+}
+#endif
+
 extern "C" __declspec(dllexport) 
 int WebKitMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPTSTR lpstrCmdLine, int nCmdShow)
 {
 #ifndef NDEBUG
-    // Show an alert when Ctrl-Alt-Shift is held down during launch to give the user time to attach a
-    // debugger. This is useful for debugging problems that happen early in the web process's lifetime.
-    const unsigned short highBitMaskShort = 0x8000;
-    if (getenv("WEBKIT2_PAUSE_WEB_PROCESS_ON_LAUNCH") || (::GetKeyState(VK_CONTROL) & highBitMaskShort) && (::GetKeyState(VK_MENU) & highBitMaskShort) && (::GetKeyState(VK_SHIFT) & highBitMaskShort))
-        ::MessageBoxW(0, L"You can now attach a debugger to " PROCESS_NAME L". You can use\nthe same debugger for WebKit2WebProcessand the UI process, if desired.\nClick OK when you are ready for WebKit2WebProcess to continue.", L"WebKit2WebProcess has launched", MB_OK | MB_ICONINFORMATION);
+    pauseProcessIfNeeded(hInstance);
 #endif
 
     enableDataExecutionPrevention();
